--- a/XrayTransmission.html
+++ b/XrayTransmission.html
@@ -349,8 +349,10 @@ loadDataFiles();
 
 <hr>
 <p class="note" style="text-align:center;">
-  © 2025 Gaoming Zhu. Part of the data are based on NIST X-ray databases and are
-  intended for scientific research only, not for commercial use.
+  © 2025 Gaoming Zhu.
+  This tool uses tabulated X-ray attenuation data derived from publicly available NIST databases.
+  NIST is not affiliated with, does not endorse, and is not responsible for this tool.
+  All data are provided strictly for scientific and educational use, not for commercial purposes.
 </p>
 
 </body>
