--- a/XrayTransmission.html
+++ b/XrayTransmission.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<h1>X-ray Filter Transmission</h1>
+<h1>X-ray Transmission Calculation</h1>
 <p class="note">
   This tool calculates the transmission of an X-ray beam through a solid filter
   using tabulated mass attenuation coefficients μ/ρ(E) and densities.
