--- a/XrayTransmission.html
+++ b/XrayTransmission.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>X-ray Filter Transmission (formal version)</title>
+  <title>X-ray Transmission Calculation (formal version)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Chart.js 用于画图 -->
